--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Apple clone</title>
 <script type="text/javascript"></script>
 <link rel="stylesheet" href="apple.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
